# core-bioimage-io-python

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  changelog.md  index.html  manifest.yaml  mkdocs.yaml  pyproject.toml  pytest.ini  search.js  setup.cfg  setup.py  shape_change_model.yaml  test_input.npy  test_output.npy  tox.ini  upsample_model.py  versions.json
.github/: release-drafter.yml
.github/workflows/: build.yaml  build.yml  draft-release.yml  post_pr.yaml  release.yml
bioimageio/: core.html  spec.html
bioimageio/core/: VERSION  __init__.py  __main__.py  _create_model_adapter.py  _dynamic_conda_env.py  _io.py  _magic_tensor_ops.html  _model_adapter.py  _op_base.html  _op_base.py  _prediction_pipeline.html  _prediction_pipeline.py  _resource_tests.html  _resource_tests.py  _settings.html  _settings.py  axis.html  axis.py  block.html  block.py  block_meta.html  block_meta.py  bulk_predict.py  cache.py  cli.html  cli.py  commands.html  commands.py  common.html  common.py  dataset.html  dataset.py  digest_spec.html  digest_spec.py  image_helper.py  io.html  io.py  measure_groups.py  model_adapters.html  model_adapters.py  (+34 more)
bioimageio/runners/: base.py
bioimageio/sklearn/: models.py
bioimageio/spec/: __init__.py  __main__.py  application.html  common.html  conda_env.html  dataset.html  exceptions.py  fields.py  generic.html  model.html  nodes.py  pretty_validation_errors.html  raw_nodes.py  schema.py  schema_v0_1.py  summary.html  utils.html
conda-recipe/: meta.yaml
coverage/: class_index.html  function_index.html  index.html  status.json  z_0a58705720407a5b___init___py.html  z_0a58705720407a5b__model_adapter_py.html  z_0a58705720407a5b_keras_backend_py.html  z_0a58705720407a5b_onnx_backend_py.html  z_0a58705720407a5b_pytorch_backend_py.html  z_0a58705720407a5b_tensorflow_backend_py.html  z_0a58705720407a5b_torchscript_backend_py.html  z_132b4917317a4d8f___init___py.html  z_132b4917317a4d8f_v0_2_py.html  z_132b4917317a4d8f_v0_3_py.html  z_14e0007d52c921ca___init___py.html  z_14e0007d52c921ca__v0_2_converter_py.html  z_14e0007d52c921ca__v0_3_converter_py.html  z_14e0007d52c921ca_v0_2_py.html  z_14e0007d52c921ca_v0_3_py.html  z_1c9984a0493eef95___init___py.html  z_1c9984a0493eef95__compare_py.html  z_1c9984a0493eef95__type_guards_py.html  z_1c9984a0493eef95_testing_py.html  z_26936cb883974160___init___py.html  z_26936cb883974160___main___py.html  z_26936cb883974160__magic_tensor_ops_py.html  z_26936cb883974160__op_base_py.html  z_26936cb883974160__prediction_pipeline_py.html  z_26936cb883974160__resource_tests_py.html  z_26936cb883974160__settings_py.html  z_26936cb883974160_axis_py.html  z_26936cb883974160_block_meta_py.html  z_26936cb883974160_block_py.html  z_26936cb883974160_cli_py.html  z_26936cb883974160_commands_py.html  z_26936cb883974160_common_py.html  z_26936cb883974160_dataset_py.html  z_26936cb883974160_digest_spec_py.html  z_26936cb883974160_io_py.html  z_26936cb883974160_model_adapters_py.html  (+122 more)
dev/: 404.html  env-313.yaml  env-dev.yaml  env-full.yaml  env-gpu.yaml  env-py38.yaml  env-tf.yaml  env-wo-python.yaml  env.yaml  environment-base.yaml  environment-tf-legacy.yaml  environment-tf.yaml  environment-torch.yaml  index.html  objects.inv  sitemap.xml
dev/api/: index.html
dev/changelog/: index.html
dev/cli/: index.html
dev/compatibility/: index.html
dev/coverage/: class_index.html  covindex.html  function_index.html  index.html  status.json  z_0a58705720407a5b___init___py.html  z_0a58705720407a5b__model_adapter_py.html  z_0a58705720407a5b_keras_backend_py.html  z_0a58705720407a5b_onnx_backend_py.html  z_0a58705720407a5b_pytorch_backend_py.html  z_0a58705720407a5b_tensorflow_backend_py.html  z_0a58705720407a5b_torchscript_backend_py.html  z_58cd9c0c70051b4a___init___py.html  z_58cd9c0c70051b4a__compare_py.html  z_58cd9c0c70051b4a__type_guards_py.html  z_5978e2765e206ae6___init___py.html  z_5978e2765e206ae6___main___py.html  z_5978e2765e206ae6__magic_tensor_ops_py.html  z_5978e2765e206ae6__op_base_py.html  z_5978e2765e206ae6__prediction_pipeline_py.html  z_5978e2765e206ae6__resource_tests_py.html  z_5978e2765e206ae6__settings_py.html  z_5978e2765e206ae6_axis_py.html  z_5978e2765e206ae6_block_meta_py.html  z_5978e2765e206ae6_block_py.html  z_5978e2765e206ae6_cli_py.html  z_5978e2765e206ae6_commands_py.html  z_5978e2765e206ae6_common_py.html  z_5978e2765e206ae6_dataset_py.html  z_5978e2765e206ae6_digest_spec_py.html  z_5978e2765e206ae6_io_py.html  z_5978e2765e206ae6_model_adapters_py.html  z_5978e2765e206ae6_prediction_py.html  z_5978e2765e206ae6_proc_ops_py.html  z_5978e2765e206ae6_proc_setup_py.html  z_5978e2765e206ae6_sample_py.html  z_5978e2765e206ae6_stat_calculators_py.html  z_5978e2765e206ae6_tensor_py.html  (+8 more)
docs/: changelog.md  cli.md  compatibility.md  get_started.md  installation.md  use_in_python.md
example/: bioimageio-core-usage.ipynb  bioimageio.core_usage.ipynb  dataset_creation.ipynb  dataset_statistics_demo.ipynb  demo.ipynb  model_creation.ipynb  model_creation.ipynb.needs_update  model_usage.ipynb  model_usage_requirements.txt  use_contrib.py
json_specs/: generated_model_spec_0.3.0.json  model_spec.json
presentations/: create_ambitious_sloth.ipynb  create_ambitious_sloth.slides.html
pybio/: __init__.py  array.py  exceptions.py
pybio_spec/: __init__.py  fields.py  schema.py  spec_types.py
scripts/: bioimageio_model_spec.md  gen_spec_doc.py  generate_api_doc_pages.py  generate_json_specs.py  generate_workflow_rdfs.py  setup_dev_env.py  show_diff.py
tests/: conftest.py  test_add_weights.py  test_any_model_fixture.py  test_bioimageio_collection.py  test_bioimageio_spec_version.py  test_cli.py  test_commands.py  test_digest_spec.py  test_export_package.py  test_image_helper.py  test_io.py  test_manifest.py  test_package.py  test_prediction.py  test_prediction_pipeline.py  test_prediction_pipeline_device_management.py  test_proc_ops.py  test_resource_tests.py  test_stat_calculators.py  test_stat_measures.py  test_tensor.py  test_weight_converters.py  utils.py
(+427 files in other folders)
