[project]
name = "bioimageio.core"
description = "Python specific core utilities for bioimage.io resources (in particular DL models)."
authors = [{ name = "Fynn Beuttenmüller", email = "thefynnbe@gmail.com" }]
requires-python = ">=3.9"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "bioimageio.spec ==0.5.7.0",
    "imagecodecs",
    "imageio>=2.10",
    "loguru",
    "numpy",
    "pydantic-settings>=2.5,<3",
    "pydantic>=2.7.0,<3",
    "ruyaml",
    "scipy",
    "tqdm",
    "typing-extensions",
    "xarray>=2023.01",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
[project.scripts]
bioimageio = "bioimageio.core.__main__:main"

[project.urls]
"Bug Reports" = "https://github.com/bioimage-io/core-bioimage-io-python/issues"
Changelog = "https://github.com/bioimage-io/core-bioimage-io-python?tab=readme-ov-file#changelog"
Documentation = "https://bioimage-io.github.io/core-bioimage-io-python/bioimageio/core.html"
Source = "https://github.com/bioimage-io/core-bioimage-io-python"

[project.optional-dependencies]
onnx = [
    "onnxruntime",
    "onnxscript",
    'onnx_ir!=0.1.14;python_version<"3.10"', # uses typing.Concatentate which requires py>=3.10
]
pytorch = ["torch>=1.6,<3", "torchvision>=0.21", "keras>=3.0,<4"]
tensorflow = ["tensorflow", "keras>=2.15,<4", "h5py"]
partners = [
    # "biapy",          # pins core exactly
    "careamics",
    # "stardist",         # for model testing and stardist postprocessing  # TODO: add updated stardist to partners env
]
dev = [
    "cellpose",                              # for model testing
    "crick",
    "griffe-pydantic",
    "griffe-inherited-docstrings",
    "griffe-public-redundant-aliases",
    "httpx",
    "jupyter",
    "keras>=3.0,<4",
    "matplotlib",
    "monai",                                 # for model testing
    "numpy",
    "onnx",
    "onnxruntime",
    "onnxscript",
    'onnx_ir!=0.1.14;python_version<"3.10"', # uses typing.Concatentate which requires py>=3.10
    "packaging>=17.0",
    "pre-commit",
    "pyright==1.1.407",
    "pytest-cov",
    "pytest",
    "python-dotenv",
    "segment-anything",                      # for model testing
    "tensorflow",
    "timm",                                  # for model testing
    "torch>=1.6,<3",
    "torchvision>=0.21",
]
docs = [
    "markdown-callouts",
    "markdown-exec[ansi]",
    "markdown-pycon",
    "mike",
    "mkdocs-api-autonav",
    "mkdocs-coverage",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-material",
    "mkdocs-section-index",
]

[build-system]
requires = ["pip", "setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]

[tool.setuptools.dynamic]
version = { attr = "bioimageio.core.__version__" }

[tool.pyright]
exclude = [
    "**/.*",
    "**/__pycache__",
    "**/node_modules",
    "dogfood",
    "presentations",
    "scripts/generate_api_doc_pages.py",
    "tests/old_*",
]
include = ["src", "scripts", "tests"]
pythonPlatform = "All"
pythonVersion = "3.9"
reportDuplicateImport = "error"
reportImplicitStringConcatenation = "error"
reportIncompatibleMethodOverride = true
reportMatchNotExhaustive = "error"
reportMissingSuperCall = "error"
reportMissingTypeArgument = true
reportMissingTypeStubs = "warning"
reportPropertyTypeMismatch = "error"
reportUninitializedInstanceVariable = "error"
reportUnknownMemberType = false
reportUnnecessaryIsInstance = false
reportUnnecessaryTypeIgnoreComment = "error"
reportUnsupportedDunderAll = "error"
reportUnusedCallResult = "error"
reportUnusedClass = "error"
reportUnusedExpression = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"
reportWildcardImportFromLibrary = "error"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

[tool.pytest.ini_options]
addopts = "--doctest-modules --failed-first --ignore dogfood --ignore src/bioimageio/core/backends --ignore src/bioimageio/core/weight_converters --ignore scripts/generate_api_doc_pages.py"
testpaths = ["src", "tests"]

[tool.ruff]
line-length = 88
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
exclude = [
    "presentations",
    "scripts/pdoc/original.py",
    "scripts/pdoc/patched.py",
]

[tool.ruff.lint]
select = ["NPY201"]

[tool.ruff.lint.isort]
known-first-party = ["bioimageio"]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:", "assert_never\\("]

[tool.coverage.run]
patch = ["subprocess"]
